--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
@@ -5,38 +5,51 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SubCategoryCell" customModule="Bazaar_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="5" rowHeight="10" id="KGk-i7-Jjw" customClass="SubCategoryCell" customModule="Bazaar_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="206" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="206" height="58"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejI-Ha-0ZF">
-                        <rect key="frame" x="5" y="0.0" width="315" height="44"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejI-Ha-0ZF">
+                        <rect key="frame" x="0.0" y="0.0" width="206" height="58"/>
+                        <color key="backgroundColor" red="1" green="0.88722067410000005" blue="0.65450122759999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Label">
+                                <attributes>
+                                    <color key="NSColor" systemColor="systemOrangeColor"/>
+                                    <font key="NSFont" size="36" name=".SFNS-Regular"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="45k-W0-bqW"/>
-                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="7oJ-w2-9lC"/>
-                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="XG2-hh-JkG"/>
-                    <constraint firstAttribute="trailing" secondItem="ejI-Ha-0ZF" secondAttribute="trailing" id="hNW-AD-768"/>
-                    <constraint firstAttribute="bottom" secondItem="ejI-Ha-0ZF" secondAttribute="bottom" id="odj-Rj-GBw"/>
+                    <constraint firstAttribute="bottom" secondItem="ejI-Ha-0ZF" secondAttribute="bottom" id="EBV-cK-IaB"/>
+                    <constraint firstAttribute="trailing" secondItem="ejI-Ha-0ZF" secondAttribute="trailing" id="NvG-ef-j7s"/>
+                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nWf-J8-cn2"/>
+                    <constraint firstItem="ejI-Ha-0ZF" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="yQi-w9-kd2"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="nameLabel" destination="ejI-Ha-0ZF" id="vZo-Ik-0UB"/>
             </connections>
-            <point key="canvasLocation" x="141" y="97"/>
+            <point key="canvasLocation" x="43.478260869565219" y="101.11607142857143"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
