--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/Subcategory/SubCategoryCell.xib
@@ -25,7 +25,7 @@
                             <fragment content="Label">
                                 <attributes>
                                     <color key="NSColor" systemColor="systemOrangeColor"/>
-                                    <font key="NSFont" size="36" name=".SFNS-Regular"/>
+                                    <font key="NSFont" metaFont="system" size="36"/>
                                     <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
