--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/List Cell/ListCell.xib
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/View/List Cell/ListCell.xib
@@ -38,6 +38,38 @@
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="840-uL-ilf">
                                                         <rect key="frame" x="0.0" y="0.0" width="356" height="101.5"/>
+                                                        <subviews>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ACZ-fF-s1a">
+                                                                <rect key="frame" x="0.0" y="0.0" width="284" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2wr-qc-BME">
+                                                                <rect key="frame" x="292" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rgB-vH-caK">
+                                                                <rect key="frame" x="300" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yIh-By-OOC">
+                                                                <rect key="frame" x="308" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cee-oA-h4V">
+                                                                <rect key="frame" x="316" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TB2-k8-PGb">
+                                                                <rect key="frame" x="324" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ifE-rr-61j">
+                                                                <rect key="frame" x="332" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4RU-La-jJH">
+                                                                <rect key="frame" x="340" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5ZU-VL-Kio">
+                                                                <rect key="frame" x="348" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sUn-NY-i9l">
+                                                                <rect key="frame" x="356" y="0.0" width="0.0" height="101.5"/>
+                                                            </imageView>
+                                                        </subviews>
                                                     </stackView>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -95,6 +127,16 @@
                 <outlet property="frameView" destination="IUR-Zf-fp5" id="yJt-sY-Vir"/>
                 <outlet property="listNameLabel" destination="h5f-WE-t17" id="Myj-PJ-cSM"/>
                 <outlet property="productImagesStack" destination="840-uL-ilf" id="uIx-dv-FHi"/>
+                <outletCollection property="productImages" destination="TB2-k8-PGb" collectionClass="NSMutableArray" id="EGR-v2-qMt"/>
+                <outletCollection property="productImages" destination="ACZ-fF-s1a" collectionClass="NSMutableArray" id="2hr-v3-BD8"/>
+                <outletCollection property="productImages" destination="2wr-qc-BME" collectionClass="NSMutableArray" id="7JM-UB-xNv"/>
+                <outletCollection property="productImages" destination="rgB-vH-caK" collectionClass="NSMutableArray" id="RS6-8X-fFP"/>
+                <outletCollection property="productImages" destination="yIh-By-OOC" collectionClass="NSMutableArray" id="bC9-2E-vVz"/>
+                <outletCollection property="productImages" destination="cee-oA-h4V" collectionClass="NSMutableArray" id="YGY-z4-F9W"/>
+                <outletCollection property="productImages" destination="ifE-rr-61j" collectionClass="NSMutableArray" id="PKB-X4-osl"/>
+                <outletCollection property="productImages" destination="4RU-La-jJH" collectionClass="NSMutableArray" id="9gS-wU-euN"/>
+                <outletCollection property="productImages" destination="5ZU-VL-Kio" collectionClass="NSMutableArray" id="vrs-x0-6hh"/>
+                <outletCollection property="productImages" destination="sUn-NY-i9l" collectionClass="NSMutableArray" id="N5f-5q-D3O"/>
             </connections>
             <point key="canvasLocation" x="89.855072463768124" y="78.683035714285708"/>
         </tableViewCell>
